# AquaPose

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.claude/commands/: elegance-review.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docs.yml  publish.yml  release.yml  slow-tests.yml  test.yml
.hooks/: check-import-boundary.sh
.planning/: GUIDEBOOK.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SOURCES.md  STATE.md  alpha_refactor_guidebook.md  coco-interchange-plan.md  config.json  cross_view_holdout_spec.md  proposed_pipeline.md  seed-pseudo-labeling.md  v3.0-MILESTONE-AUDIT.md  v3.10-MILESTONE-AUDIT.md  v3.3-MILESTONE-AUDIT.md  v3.8-MILESTONE-AUDIT.md
.planning/debug/: 9fish-coldstart-failure.md  association-ray-convergence-failure.md  association-singletons.md  batched-yolo-nondeterminism.md  keypoint-midline-ribbon-loops.md  midline-50pct-short.md  no-splines-synthetic-output.md  pose-backend-v-shape-midlines.md  pose-scrunched-orthogonal-midlines.md  real-data-curve-fitting-gap.md  seg-backend-no-midlines.md  seg-missing-midlines.md  spline-triangulation-offset.md
.planning/debug/resolved/: curve-optimizer-high-loss.md  curve-optimizer-zero-loss.md  ghost-track-phantom-births.md  track-jerk-freeze-die-v2.md  track-jerk-freeze-die.md  triangulation-above-water-outliers.md
.planning/inbox/: aquapose_pipeline_stage_structure.md  association_multikey_rework.md  association_scoring_diagnosis.md  association_tuning_analysis.md  calibration_refinement_milestone.md  chunk-mode-frame-count-carryover.md  cross_camera_association.md  curve_optimization_overview.md  curve_optimization_proposal.md  curve_optimizer_perf_audit.md  detection_segmentation_brief.md  evaluation_and_tuning_system.md  fish-reconstruction-pivot.md  fish_tracker_v1_design.md  global_id_remap_diagnostic_cache.md  labelstudio_setup.md  library-summary.md  milestone_tracking_overhaul_seed.md  phase16-pickup-notes.md  pipeline_flowcharts.md  reconstruction_backends_analysis.md  refactor_doctrine.md  refractive-triangulation-geometry.md  synthetic_tracking_dataset_spec.md  techniques_report.md  tracking_ghost_track_investigation.md  triangulation_debugging.md  triangulation_rebuild_proposal.md  z_denoising_plane_projection.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v3.1-REQUIREMENTS.md  v3.10-REQUIREMENTS.md  v3.10-ROADMAP.md  v3.2-MILESTONE-AUDIT.md  v3.2-REQUIREMENTS.md  v3.2-ROADMAP.md  v3.3-MILESTONE-AUDIT.md  v3.3-REQUIREMENTS.md  v3.3-ROADMAP.md  v3.3-SPECSEED.md  v3.4-MILESTONE-AUDIT.md  v3.4-REQUIREMENTS.md  v3.4-ROADMAP.md  v3.5-MILESTONE-AUDIT.md  v3.5-REQUIREMENTS.md  v3.6-MILESTONE-AUDIT.md  v3.6-REQUIREMENTS.md  v3.6-ROADMAP.md  v3.6-SEED.md  v3.7-MILESTONE-AUDIT.md  v3.7-REQUIREMENTS.md  v3.8-REQUIREMENTS.md  v3.9-MILESTONE-AUDIT.md  v3.9-REQUIREMENTS.md
.planning/phases/01-calibration-and-refractive-geometry/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-segmentation-pipeline/: .continue-here.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/02.1-segmentation-troubleshooting/: 02.1-01-PLAN.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  02.1-03-SUMMARY.md
.planning/phases/02.1.1-object-detection-alternative-to-mog2/: 02.1.1-01-SUMMARY.md  02.1.1-02-SUMMARY.md  02.1.1-03-PLAN.md  02.1.1-03-SUMMARY.md  02.1.1-CONTEXT.md  02.1.1-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/results/: performance-accuracy.md
baseline_tracking_output/: baseline_metrics.json
data/yolo_fish/: dataset.yaml
docs/: Makefile  conf.py  contributing.md  index.md
docs/api/: calibration.rst  core.rst  index.rst  io.rst  mesh.rst  optimization.rst  segmentation.rst  utils.rst
docs/reports/: z_uncertainty_report.md
eval_tracker_output/: comparison_metrics.json  run_log.txt
scripts/: assemble_ablation_datasets.py  assemble_no_manual_dataset.py  assemble_pose_ablation_datasets.py  build_training_data.py  build_yolo_training_data.py  debug_tracker_swap.py  detect_swaps.py  diagnose_pipeline.py  diagnose_tracking.py  eval_yolo_vs_mog2.py  evaluate_ablation_models.py  evaluate_custom_tracker.py  generate_golden_data.py  generate_wall_augments.py  id_fingerprint_analysis.py  investigate_occlusion.py  letterbox_training_data.py  measure_baseline.py  measure_baseline_tracking.py  organize_yolo_dataset.py  per_camera_spline_overlay.py  perf_validate.py  reprojection_diagnostic.py  run_pseudo_labels.py  run_reconstruction.py  sample_yolo_frames.py  test_mog2.py  test_sam2.py  tracking_video.py  train_reid_head.py  train_yolo.py  tune_association.py  tune_threshold.py  viz_single_track.py
scripts/legacy/: __init__.py  diagnose_pipeline.py  diagnose_triangulation.py  per_camera_spline_overlay.py  visualize_reprojection_diagnostic.py  visualize_tracking.py  visualize_val_predictions.py
src/aquapose/: __init__.py  cli.py  cli_utils.py  logging.py
tests/e2e/: conftest.py  test_reconstruct.py  test_smoke.py
tests/golden/: __init__.py  conftest.py  golden_detection.pt  golden_midline_extraction.pt  golden_tracking.pt  golden_triangulation.pt  metadata.pt  test_stage_harness.py
tests/integration/: __init__.py  test_calibration_cross_validation.py
tests/regression/: __init__.py  conftest.py  test_end_to_end_regression.py  test_per_stage_regression.py
tests/unit/: test_build_yolo_training_data.py  test_calibrate_keypoints.py  test_cli_utils.py  test_curve_optimizer.py  test_generate_luts_cli.py  test_midline.py  test_smoke.py  test_triangulation.py
tools/: import_boundary_checker.py  smoke_test.py
(+1181 files in other folders)
